<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33CCFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/title"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/spartan" />
    </RelativeLayout>

    <TextView
        android:id="@+id/TextViewMainActivity"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_description"
        android:textAlignment="center"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonPdf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="downloadPdf"
        android:text="@string/pdf" />

    <Button
        android:id="@+id/buttonImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="downloadImage"
        android:text="@string/image" />

    <Button
        android:id="@+id/buttonTextfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="downloadTextfile"
        android:text="@string/textfile" />

    <Button
        android:id="@+id/buttonClose_a"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="closeMainActivity"
        android:text="@string/close" />

</LinearLayout>